# QuickProbe

./: .gitignore  CHANGELOG.md  README.md  claude.md  create_ico.ps1  generate-ico.js  generate-icons.js  jsconfig.json  package-lock.json  package.json  tailwind.config.js  update-application.ps1  wdio.conf.cjs
.claude/: settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  release.yml  test.yml
docs/: BUILD_FROM_SCRATCH.md  RELEASING.md
e2e/: app-launch.spec.js  dashboard.spec.js  hosts.spec.js  options.spec.js
scripts/: verify.ps1
src-tauri/: Cargo.toml  audit.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  constants.rs  db.rs  lib.rs  logger.rs  main.rs  normalize.rs  updater.rs
src-tauri/src/commands/: auth.rs  backup.rs  export.rs  health.rs  helpers.rs  hosts.rs  launcher.rs  ldap.rs  mod.rs  remote.rs  services.rs  settings_cmds.rs  state.rs  system.rs  types.rs
src-tauri/src/core/: credential.rs  mock_session.rs  mod.rs  probes.rs  session.rs  validation.rs
src-tauri/src/models/: credentials.rs  mod.rs
src-tauri/src/platform/: credman.rs  mod.rs  registry.rs  ssh.rs  winrm.rs
src-tauri/src/utils/: errors.rs  mod.rs  retry.rs
swatto.co.uk/: README.md  index.html  sitemap.xml
ui/: about.html  app.js  dashboard-all.html  dashboard-minimal.css  dashboard-utils.js  dashboard.js  hosts.html  input.css  login.html  options.html  styles.css  theme.js  update-required.html  update-required.js
